[metadata]
name = django-quaddicted
version = 0.2
description = A Django project for the Quaddicted website
long_description = file: README.md
url = https://quaddicted.com/
author = James O'Neill
author_email = hemebond@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    Django>=3.0.2
    django-imagekit
    django-contrib-comments
    django-taggit
    django-taggit-serializer
    django-extra-views
    djangorestframework
    Pillow
    vgio
    django-registration-redux
    djangobb-forum @ git+https://github.com/hemebond/djangobb.git#egg=djangobb-forum
